# mh-project-

./: .actrc  .dockerignore  .editorconfig  .env.example  .env.production.template  .env.vps.example  .eslintignore  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets  .secrets.baseline  .secrets.example  .sqlfluff  .vercelignore  2K_PROBLEMS_FIXED_SUMMARY.md  ACTIVE_IMPORTS_BASELINE.txt  ACTUAL_PROJECT_STATUS_NOV_25_2025.md  ADDENDUM_MULTI_LLM_ENSEMBLE.md  ADMIN_DASHBOARD_TRAINING.md  ADMIN_PANEL_FEATURE_GAP_ANALYSIS.md  AI_ADAPTIVE_TONE_SYSTEM.md  AI_AGENT_ARCHITECTURE_OPTIMIZED.md  AI_AGENT_EXPANSION_ANALYSIS.md  AI_AGENT_EXPANSION_SUMMARY.md  AI_COMPETITIVE_ADVANTAGE_STRATEGY.md  AI_CUSTOMER_SERVICE_AUTOMATION_SYSTEM.md  AI_ML_ENHANCEMENT_ANALYSIS.md  AI_ML_SYSTEM_ARCHITECTURE_ANALYSIS.md  AI_MONITORING_QUICK_REFERENCE.md  AI_MULTI_LLM_ENSEMBLE_DESIGN.md  AI_ORCHESTRATOR_QUICK_REFERENCE.md  AI_READINESS_SYSTEM_OPTIONS.md  AI_SELF_LEARNING_GAP_ANALYSIS.md  AI_V3_COMPLETION_SUMMARY.md  AI_V3_QUICK_REFERENCE.md  API_INTEGRATION_TEST_RESULTS.md  API_RESPONSE_VALIDATION_ANALYSIS.md  (+346 more)
apps/backend/: .coverage  .env.example  .ruff.toml  AI_DATABASE_PERFORMANCE_IMPROVEMENTS.md  ALEMBIC_AUDIT_REPORT.txt  ALEMBIC_STATE.md  API_ENDPOINT_FIXES_SUMMARY.md  API_ENDPOINT_MAPPING_FRONTEND.md  API_FIXES_SUCCESS_REPORT.md  ARCHITECTURAL_PATTERN_ANALYSIS.md  ARCHITECTURE.md  BOOKING_SERVICE_TEST_COMPLETION_REPORT.md  CACHE_STRATEGY.md  CELERY_MONITORING.md  CIRCULAR_IMPORT_PREVENTION_GUIDE.md  COMPREHENSIVE_RELATIONSHIP_AUDIT_COMPLETE.md  CREATE_BOOKING_COMMAND_ANALYSIS.md  CRITICAL_BUGS_DEEP_AUDIT.md  CROSS_CHECK_VERIFICATION.md  DATABASE_MIGRATIONS.md  DEEP_PERFORMANCE_ANALYSIS.md  DOCUMENTATION_ACCURACY_VALIDATION_REPORT.md  DUPLICATE_MODELS_ANALYSIS.md  Dockerfile  ENDPOINT_MIGRATION_COMPLETE.md  ENHANCED_NLP_INTEGRATION_GUIDE.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  FINAL_EXHAUSTIVE_BUG_AUDIT.md  FOURTH_ROUND_DEEP_AUDIT_BUGS_13_15.md  HEALTH_CHECKS.md  INTEGRATION_TEST_RESULTS_SUMMARY.md  LAYER_ACCURACY_ANALYSIS.md  LEGACY_ARCHITECTURE_AUDIT_REPORT.md  LEGACY_CONSOLIDATION_PLAN.md  MIGRATION_BUG_REPORT.md  MIGRATION_SUMMARY.md  MIXIN_ARCHITECTURE_GUIDE.md  MULTI_CHANNEL_AI_TRAINING_GUIDE.md  NEXT_STEPS.md  OPTIMIZATION_MATURITY_MATRIX.md  (+169 more)
apps/backend/archive_old_reports/: AI_DATABASE_PERFORMANCE_IMPROVEMENTS.md  ARCHITECTURAL_PATTERN_ANALYSIS.md  CACHE_STRATEGY.md  COMPLETE_SETUP_SUCCESS.md  CREATE_BOOKING_COMMAND_ANALYSIS.md  DEEP_PERFORMANCE_ANALYSIS.md  MULTI_CHANNEL_AI_TRAINING_GUIDE.md  OPTIMIZATION_MATURITY_MATRIX.md  PERFORMANCE_OPTIMIZATION_FINAL_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  SCHEDULE_FOLLOWUP_DEEP_ANALYSIS_SUMMARY.md  SCHEDULE_FOLLOWUP_PERFORMANCE_ANALYSIS.md  SCHEMA_ALIGNMENT_ISSUES.md  SQL_ERRORS_EXPLANATION.md  TESTING_SESSION_FINAL_STATUS.md  TEST_INFRASTRUCTURE_VALIDATION.md  TIMEZONE_DST_GUIDE.md  WEBHOOK_SETUP_INSTRUCTIONS.md  WEBHOOK_TESTING_COMPLETE.md
apps/backend/backups/: config.py.backup_20251026_222119
apps/backend/backups_20251125_211908/: models_lead.py.DELETE_BACKUP
apps/backend/docs/: PHASE_2_2_RINGCENTRAL_WEBHOOK_ANALYSIS.md  PHASE_2_3_RINGCENTRAL_NATIVE_RECORDING.md
apps/backend/migrations/: 007_add_customer_reviews.sql  008_add_customer_contact_fields.py  009_add_is_deleted_column.py  add_login_history_table.sql  add_performance_indexes.sql  apply_customer_reviews.py  apply_indexes.py  create_businesses_table.sql  menu_category_allergen_system.sql
apps/backend/scripts/: README_VALIDATE_RELATIONSHIPS.md  audit_ai_data_vs_website.py  audit_alembic_revisions.py  benchmark_improvements.py  check_addon_terminology.py  check_db_state.py  check_db_structure.py  check_indexes.py  check_menu_sync.py  check_migration_duplicates.py  check_revisions.py  check_third_protein.py  clean_fake_packages.py  create_bookings_table.py  create_consent_referral_tables.sql  create_sync_history_table.sql  create_test_db.py  deploy_to_vps.sh  fix_legacy_imports.py  list_tables_per_schema.py  migrate_model_imports.py  profile_queries.py  reset_database.py  seed_ai_training_data.py  seed_ai_training_real.py  seed_mock_data.py  seed_test_data.py  setup_enhanced_nlp.py  test_deepgram.py  test_deepgram_integration.py  test_enhanced_nlp.py  test_phase5_simple.py  test_phase5_voice_ai.py  test_week3_phase1_tone.py  test_week3_phase2_knowledge.py  test_week3_phase3_upsells.py  test_week3_phase4_e2e.py  update_menu_dietary_tags.py  update_menu_tags_psycopg2.py  update_menu_tags_simple.py  (+3 more)
apps/backend/seed_data/: menu_items_with_subcategories.py
apps/backend/src/: check_stations.sql  comprehensive_health_check.py  drop_scheduler_table.py  main.py  (+7 more)
myhibachi-ai-backend/: .env.example  main.py  pyproject.toml  requirements.txt  security_middleware.py  simple_backend_corrected.py  test_backend.py  verify_system.py
myhibachi-ai-backend/app/: database.py  logging_config.py  main.py  models.py  monitoring.py  schemas.py
myhibachi-ai-backend/prompts/: gpt_answer_wrapper.md  system_base.md
(+3127 files in other folders)
